# webgrep-rs

./: Cargo.toml  README.md  out.txt
.github/workflows/: run-tests.yaml
src/: main.rs
src/structs/: Args.rs  Element.rs  mod.rs
src/utils/: determine_file_type.rs  mod.rs  prettyprint.rs  recurse.rs  request_handler.rs  should_use_chrome.rs
tests/: test_cases.toml
