[package]
name = "webgrep-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.5"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19.0"
url = "2.5.2"
